Release 2.1.4
Release notes are available at:
https://docs.dremio.com/release-notes/21-release-notes.html