@@ -19,8 +19,11 @@ import static com.dremio.service.reflection.ReflectionUtils.removeUpdateColumn;
 import static com.dremio.service.reflection.proto.ReflectionType.AGGREGATION;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.apache.calcite.rel.RelNode;
 import org.apache.calcite.rel.core.AggregateCall;
@@ -31,71 +34,41 @@ import org.apache.calcite.rel.type.RelDataTypeField;
 import org.apache.calcite.rex.RexBuilder;
 import org.apache.calcite.rex.RexInputRef;
 import org.apache.calcite.rex.RexNode;
-import org.apache.calcite.sql.SqlAggFunction;
 import org.apache.calcite.sql.fun.SqlStdOperatorTable;
 import org.apache.calcite.sql.type.SqlTypeFamily;
 import org.apache.calcite.sql.type.SqlTypeName;
 import org.apache.calcite.util.ImmutableBitSet;
 
+import com.dremio.exec.expr.fn.hll.HyperLogLog;
 import com.dremio.exec.store.Views;
 import com.dremio.exec.util.ViewFieldsHelper;
 import com.dremio.service.accelerator.AccelerationUtils;
 import com.dremio.service.namespace.dataset.proto.DatasetConfig;
 import com.dremio.service.namespace.dataset.proto.ViewFieldType;
 import com.dremio.service.reflection.proto.DimensionGranularity;
+import com.dremio.service.reflection.proto.MeasureType;
 import com.dremio.service.reflection.proto.ReflectionDimensionField;
 import com.dremio.service.reflection.proto.ReflectionField;
 import com.dremio.service.reflection.proto.ReflectionGoal;
+import com.dremio.service.reflection.proto.ReflectionMeasureField;
 import com.dremio.service.reflection.proto.ReflectionType;
 import com.google.common.base.Function;
 import com.google.common.base.Optional;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.FluentIterable;
-import com.google.common.collect.HashMultimap;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Maps;
-import com.google.common.collect.Multimap;
 
 /**
  * An abstraction used to generate reflection plan atop given dataset plan.
  */
 public class ReflectionExpander {
-  private static final Multimap<SqlTypeFamily, SqlAggFunction> AGG_CALLS_PER_TYPE = HashMultimap.create();
-  private static final Multimap<SqlTypeFamily, SqlAggFunction> AGG_CALLS_PER_TYPE_WITH_MIN_MAX = HashMultimap.create();
 
-  private final Multimap<SqlTypeFamily, SqlAggFunction> calls;
-  private final Map<String, ViewFieldType> fields;
-
-  static {
-    AGG_CALLS_PER_TYPE_WITH_MIN_MAX.putAll(SqlTypeFamily.NUMERIC, ImmutableList.of(
-        SqlStdOperatorTable.COUNT,
-        SqlStdOperatorTable.SUM,
-        SqlStdOperatorTable.MAX,
-        SqlStdOperatorTable.MIN
-    ));
-
-    AGG_CALLS_PER_TYPE.putAll(SqlTypeFamily.NUMERIC, ImmutableList.of(
-        SqlStdOperatorTable.COUNT,
-        SqlStdOperatorTable.SUM
-    ));
-
-    for (SqlTypeFamily type: ImmutableList.of(SqlTypeFamily.CHARACTER, SqlTypeFamily.TIMESTAMP, SqlTypeFamily.DATE, SqlTypeFamily.TIME)) {
-      AGG_CALLS_PER_TYPE_WITH_MIN_MAX.putAll(type, ImmutableList.of(
-          SqlStdOperatorTable.COUNT,
-          SqlStdOperatorTable.MAX,
-          SqlStdOperatorTable.MIN
-      ));
-      AGG_CALLS_PER_TYPE.putAll(SqlTypeFamily.CHARACTER, ImmutableList.of(
-          SqlStdOperatorTable.COUNT
-      ));
-    }
-  }
+  private static final ImmutableList<MeasureType> DEFAULT_MEASURE_LIST = ImmutableList.of(MeasureType.COUNT, MeasureType.MAX, MeasureType.MIN, MeasureType.SUM);
 
   private final RelNode view;
-
   private final Map<String, RelDataTypeField> mappings;
-
-
+  private final Map<String, ViewFieldType> fields;
 
   private static Map<String, ViewFieldType> computeFieldTypes(final DatasetConfig dataset, final RelNode plan) {
     // based off AnalysisState
@@ -116,10 +89,9 @@ public class ReflectionExpander {
     });
   }
 
-  public ReflectionExpander(final RelNode view, DatasetConfig dataset, boolean includeMinMax) {
+  public ReflectionExpander(final RelNode view, DatasetConfig dataset) {
     Map<String, ViewFieldType> fields = computeFieldTypes(dataset, view);
     this.view = view;
-    this.calls = includeMinMax ? AGG_CALLS_PER_TYPE_WITH_MIN_MAX : AGG_CALLS_PER_TYPE;
     this.fields = Preconditions.checkNotNull(fields, "fields is required");
     this.mappings = FluentIterable
       .from(view.getRowType().getFieldList())
@@ -145,26 +117,14 @@ public class ReflectionExpander {
 
     final List<ReflectionField> fields = AccelerationUtils.selfOrEmpty(goal.getDetails().getDisplayFieldList());
 
-    final List<String> names = FluentIterable
-        .from(fields)
-        .transform(new Function<ReflectionField, String>() {
-          @Override
-          public String apply(final ReflectionField field) {
-            return field.getName();
-          }
-        })
-        .toList();
+    final List<String> names = fields.stream().map(field -> field.getName()).collect(Collectors.toList());
 
-    final List<RexInputRef> projections = FluentIterable
-        .from(names)
-        .transform(new Function<String, RexInputRef>() {
-          @Override
-          public RexInputRef apply(final String fieldName) {
+    final List<RexInputRef> projections = names.stream()
+        .map(fieldName -> {
             final RelDataTypeField field = getField(fieldName);
             return new RexInputRef(field.getIndex(), field.getType());
-          }
-        })
-        .toList();
+          })
+        .collect(Collectors.toList());
 
     return LogicalProject.create(view, projections, names);
   }
@@ -173,14 +133,11 @@ public class ReflectionExpander {
     Preconditions.checkArgument(goal.getType() == AGGREGATION, "required aggregation reflection");
 
     // create grouping
-    final Iterable<Integer> grouping = FluentIterable
-        .from(goal.getDetails().getDimensionFieldList())
-        .transform(new Function<ReflectionDimensionField, Integer>() {
-          @Override
-          public Integer apply(final ReflectionDimensionField dim) {
-            return getField(dim.getName()).getIndex();
-          }
-        });
+    List<ReflectionDimensionField> dimensionFieldList = AccelerationUtils.selfOrEmpty(goal.getDetails().getDimensionFieldList());
+
+    final Iterable<Integer> grouping = dimensionFieldList.stream()
+        .map(dim -> getField(dim.getName()).getIndex())
+        .collect(Collectors.toList());
     final ImmutableBitSet groupSet = ImmutableBitSet.of(grouping);
 
     // create a project below aggregation
@@ -189,7 +146,7 @@ public class ReflectionExpander {
     // (ii) to project a literal for to be used in sum0(1) for accelerating count(1), sum(1) queries
     final List<RelDataTypeField> fields = view.getRowType().getFieldList();
 
-    final Map<String, ReflectionDimensionField> dimensions = FluentIterable.from(goal.getDetails().getDimensionFieldList())
+    final Map<String, ReflectionDimensionField> dimensions = FluentIterable.from(dimensionFieldList)
         .uniqueIndex(new Function<ReflectionDimensionField, String>() {
           @Override
           public String apply(final ReflectionDimensionField field) {
@@ -248,23 +205,48 @@ public class ReflectionExpander {
 
     final RelNode child = LogicalProject.create(view, projects, fieldNames);
     // create measures
-    final List<ReflectionField> measures = goal.getDetails().getMeasureFieldList();
-    final List<AggregateCall> calls =  FluentIterable.from(AccelerationUtils.selfOrEmpty(measures))
-        .transformAndConcat(new Function<ReflectionField, Iterable<? extends AggregateCall>>() {
-          @Override
-          public Iterable<? extends AggregateCall> apply(final ReflectionField field) {
-            return createMeasuresFor(view, field);
-          }
-        })
-        .append(createDefaultMeasures(child))
-        .toList();
+    final List<ReflectionMeasureField> measures = goal.getDetails().getMeasureFieldList();
+    final List<AggregateCall> calls =  Stream.concat(
+          AccelerationUtils.selfOrEmpty(measures)
+          .stream()
+          .flatMap(this::toCalls)
+          ,
+          createDefaultMeasures(child))
+        .collect(Collectors.toList());
 
     return LogicalAggregate.create(child, false, groupSet, ImmutableList.of(groupSet), calls);
   }
 
-  private Optional<SqlTypeFamily> getSqlTypeFamily(final ReflectionField fieldDescriptor) {
-    if (fields.containsKey(fieldDescriptor.getName())) {
-      final ViewFieldType field = fields.get(fieldDescriptor.getName());
+  private Stream<AggregateCall> toCalls(ReflectionMeasureField field) {
+    Optional<SqlTypeFamily> typeFamily = getSqlTypeFamily(field.getName());
+    if(!typeFamily.isPresent()) {
+      // are we silently not measuring the field ? should we catch this during validation ?
+      return Stream.of();
+    }
+
+    // for old systems, make sure we have a default measure list if one is not specificed.
+    List<MeasureType> measures = field.getMeasureTypeList() == null || field.getMeasureTypeList().isEmpty() ? DEFAULT_MEASURE_LIST : field.getMeasureTypeList();
+    List<AggregateCall> calls = new ArrayList<>();
+    final int inputRef = getField(field.getName()).getIndex();
+    int inFieldIndex = 0;
+    for(MeasureType t : measures) {
+      AggregateCall c = createMeasureFor(inputRef, inFieldIndex, typeFamily.get(), t);
+      if(c == null) {
+        continue;
+      }
+      calls.add(c);
+    }
+    return calls.stream();
+  }
+
+  /**
+   * Get the type family of the requested field.
+   * @param name The name of the field.
+   * @return The type family or Option.absent() if no family was found/determined.
+   */
+  private Optional<SqlTypeFamily> getSqlTypeFamily(final String name) {
+    if (fields.containsKey(name)) {
+      final ViewFieldType field = fields.get(name);
       try {
         return Optional.of(SqlTypeFamily.valueOf(field.getTypeFamily()));
       } catch (final IllegalArgumentException ex) {
@@ -274,44 +256,48 @@ public class ReflectionExpander {
       return Optional.absent();
   }
 
-  private Iterable<AggregateCall> createMeasuresFor(final RelNode view, final ReflectionField field) {
-    final Optional<SqlTypeFamily> family = getSqlTypeFamily(field);
-    if (!family.isPresent()) {
-      // are we silently not measuring the field ? should we catch this during validation ?
-      return ImmutableList.of();
+  /**
+   * For a particular input and type family, create the request type if it is allowed.
+   * @param inputRef The input of that this measure will be applied to.
+   * @param index The index of this measure when the collection of measure for this input field.
+   * @param family The type family of the field.
+   * @param type The type of measure to generate.
+   * @return An aggregate call or null if we can't create a measure of the requested type.
+   */
+  private AggregateCall createMeasureFor(int inputRef, int index, SqlTypeFamily family, MeasureType type) {
+
+    // skip measure columns for invalid types.
+    if(!ReflectionValidator.getValidMeasures(family).contains(type)) {
+      return null;
     }
 
-    return FluentIterable
-      .from(AccelerationUtils.selfOrEmptyCollection(calls.get(family.get())))
-      .transform(new Function<SqlAggFunction, AggregateCall>() {
-        private int index = 0;
-
-        @Override
-        public AggregateCall apply(final SqlAggFunction func) {
-          // no distinct measures for now
-          final int inputRef = getField(field.getName()).getIndex();
-          return AggregateCall.create(func, false, ImmutableList.of(inputRef), -1, 1, view, null,
-            String.format("agg-%s-%s", inputRef, index++));
-        }
-      });
+    switch(type) {
+    case APPROX_COUNT_DISTINCT:
+      return AggregateCall.create(HyperLogLog.HLL, false, ImmutableList.of(inputRef), -1, 1, view, null, String.format("agg-%s-%s", inputRef, index));
+    case COUNT:
+      return AggregateCall.create(SqlStdOperatorTable.COUNT, false, ImmutableList.of(inputRef), -1, 1, view, null, String.format("agg-%s-%s", inputRef, index));
+    case MAX:
+      return AggregateCall.create(SqlStdOperatorTable.MAX, false, ImmutableList.of(inputRef), -1, 1, view, null, String.format("agg-%s-%s", inputRef, index));
+    case MIN:
+      return AggregateCall.create(SqlStdOperatorTable.MIN, false, ImmutableList.of(inputRef), -1, 1, view, null, String.format("agg-%s-%s", inputRef, index));
+    case SUM:
+      return AggregateCall.create(SqlStdOperatorTable.SUM, false, ImmutableList.of(inputRef), -1, 1, view, null, String.format("agg-%s-%s", inputRef, index));
+    case UNKNOWN:
+    default:
+      throw new UnsupportedOperationException(type.name());
+    }
   }
 
-  private Iterable<AggregateCall> createDefaultMeasures(final RelNode view) {
+  private Stream<AggregateCall> createDefaultMeasures(final RelNode view) {
     final int literalIndex = view.getRowType().getFieldCount() -1;
-    return ImmutableList.of(
-        AggregateCall.create(SqlStdOperatorTable.SUM0, false, ImmutableList.of(literalIndex), -1, 1, view, null,
-            "agg-sum0-0"),
-        AggregateCall.create(SqlStdOperatorTable.COUNT, false, ImmutableList.of(literalIndex), -1, 1, view, null,
-            "agg-count1-0")
-    );
+    return Stream.of(
+        AggregateCall.create(SqlStdOperatorTable.SUM0, false, ImmutableList.of(literalIndex), -1, 1, view, null, "agg-sum0-0"),
+        AggregateCall.create(SqlStdOperatorTable.COUNT, false, ImmutableList.of(literalIndex), -1, 1, view, null, "agg-count1-0")
+        );
   }
 
   private RelDataTypeField getField(final String name) {
     return Preconditions.checkNotNull(mappings.get(name), String.format("unable to find field %s in the view", name));
   }
 
-
-//  private static String newRandString() {
-//    return Long.toHexString(Double.doubleToLongBits(Math.random()));
-//  }
 }
